[package]
name = "tg-proxy-check"
version = "0.1.0"
edition = "2021"
description = "Check Telegram reachability through MTProto or SOCKS5 proxies using TDLib pingProxy"
license = "MIT"
readme = "README.md"

[[bin]]
name = "tg-proxy-check"
path = "src/main.rs"

[features]
default = ["tdlib"]
# Disable default features to build/test without linking libtdjson (parser-only CI).
tdlib = []

[dependencies]
clap = { version = "4.5", features = ["derive"] }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "1"
url = "2"

[build-dependencies]
pkg-config = "0.3"
